[package]
name = "ohabench"
version = "0.1.0"
authors = ["Shane Stanley <shane@thedragon.dev>"]
edition = "2021"
description = "HTTP load testing tool with automatic breaking point detection using oha"
license = "MIT"
repository = "https://github.com/Frosthaven/ohabench"
readme = "README.md"
keywords = ["http", "benchmark", "load-testing", "oha", "performance"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
anyhow = "1"
regex = "1"
base64 = "0.22"
plotters = "0.3"
wait-timeout = "0.2"

[profile.release]
lto = true
strip = true
